# GPU_AAD

./: .gitignore  CLAUDE.md  CMakeLists.txt  GPU-vs-AADC-results.md  ISDA-SIMM.md  README.md  SIMM-implementation-aadc.md  aadc_bench.txt  bench.py  bench_aadc_test.txt  bench_log_test.txt  bench_out.txt  bench_results.txt  bench_stderr.txt  benchmark_aadc_v1_vs_v2.py  benchmark_aadc_vs_gpu.md  benchmark_aadc_vs_gpu.py  benchmark_batched_linesearch.py  benchmark_cuda.md  benchmark_portfolio.py  benchmark_pure_gpu_ir.py  benchmark_results.json  benchmark_results.md  benchmark_simm.py  benchmark_trading_workflow.md  benchmark_trading_workflow.py  benchmark_typical_day.py  cuda_bench_100.txt  cuda_opt_test.txt  cuda_test_output.txt  daily_TOC.md  demo_data.json  full-ISDA-benchmark.md  gpu_test.txt  optimization_demo.html  quick_bench.py  requirements.txt  requirements_gpu.txt  run_aadc_scaling.sh  run_bench.py  (+15 more)
Weights_and_Corr/: v2_5.py
benchmark/: CLAUDE.md  EXECUTION_GUIDE.md  __init__.py  benchmark_fair.py  cost.py  data_gen.py  environment.py  export.py  optimizer.py  simm_formula.py  sweep.py  validate_simm.py
common/: __init__.py  config.py  logger.py  portfolio.py  utils.py
data/: aadc_500_multi.txt  baseline_multi.txt  crif_output.csv  execution_log.csv  execution_log_batched.csv  execution_log_portfolio.csv  opt_100t_3p.txt  opt_500t_5p.txt  opt_fix_test.txt  opt_v4_100t_3p.txt  opt_v4_500t_5p.txt  pretrade_bench.txt  trade_contributions.csv  typical_day.csv  whatif_bench.txt
docs/: SIMM-benchmark-draft.md  SIMM-benchmark-fact-check.md  SIMM-benchmark-publication.md  SIMM-implementation-aadc-GPU.md  SIMM-implementation-aadc.md  aadc_integration_plan.md  architecture.md  client-facing.md  concerns.md  gpu-implementation-effort.md  margin_optimization_plan.md  requirements.md  review.md
model/: __init__.py  batched_optimizer.py  ir_swap_aadc.py  ir_swap_common.py  ir_swap_pricer.py  json_export.py  margin_analysis.py  pretrade_analytics.py  pure_gpu_ir.py  simm_allocation_optimizer.py  simm_allocation_optimizer_v2.py  simm_cuda.py  simm_portfolio_aadc.py  simm_portfolio_aadc_v2.py  simm_portfolio_baseline.py  simm_portfolio_cuda.py  (+2 more)
(+87 files in other folders)
